  now implements ProperPageIdentity, rather than just PageIdentity.
* Content::preSaveTransform was hard-deprecated since 1.37,
  use ContentTransformer::preSaveTransform instead. Extensions defining
  a content model should override ContentHandler::preSaveTransform.
* Skin::bottomScripts is deprecated. Use OutputPage::getBottomScripts instead.
* …

=== Deprecations in 1.37 ===
* JobQueue::getWiki, deprecated in 1.33, now emits deprecation warnings.
* In AbstractBlock, the getTargetAndType() and getTarget() methods are
  hard deprecated. Instead use getTargetName() and getTargetUserIdentity()
  together with getType().
* Deprecated passing UserIdentity to
  WatchlistManager::clearAllUserNotifications() and
  WatchlistManager::clearTitleUserNotifications(). Pass Authority instead.
* Deprecated passing LinkTarget to
  WatchlistManager::clearTitleUserNotifications() and
  WatchlistManager::getTitleNotificationTimestamp(). Pass PageIdentity instead.
* Deprecated User::isWatched(), User::isTempWatched(), User::addWatch(), and
  User::removeWatch(). Use corresponding methods in WatchlistManager instead.
* Deprecated WatchAction::doWatchOrUnwatch(). Use WatchlistManager::setWatch()
  instead.
* Deprecated WatchAction::doWatch() and WatchAction::doUnwatch(). Use
  WatchlistManager::addWatch() or WatchlistManager::removeWatch(), instead.
* WatchAction::getWatchToken is hard deprecated. Instead use
  CsrfTokenSet::getToken
* Action::getHookContainer() has been marked as internal. Actions that require
  access to a hook container should have one injected instead.
* The getTitle() and setTitle() methods in Parser have been deprecated.
  Use getPage() and setPage() instead.
* Title::isWatchable() has been deprecated. Use WatchlistManager::isWatchable()
  instead.
* Methods and classes related to the primary database, previously referred to as
  'master', have been deprecated, with the new ones replacing them as follows: